added search user api, get user by id api and fixed typos in routes (#5)
