# internal/api/types/dto/users_profile.go
@@ -27,29 +27,44 @@ type UpdateBioAndProfilePic struct {
 }
 
 type UserProfileResponse struct {
-	UserProfile UserProfile
-	Cursor      int64
+	UserProfile UserProfile `json:"user_profile"`
+	Cursor      int64       `json:"cursor"`
 }
 
 type UserProfile struct {
-	FirstName      string
-	LastName       string
-	ProfilePicture *string
-	Rank           string
-	Bio            *string
-	FollowersCount int64
-	FollowingCount int64
-	TotalPostCount int64
-	Posts          []Post
+	FirstName      string  `json:"firstName"`
+	LastName       string  `json:"lastName"`
+	ProfilePicture *string `json:"profile_picture"`
+	Rank           string  `json:"rank"`
+	Bio            *string `json:"bio"`
+	FollowersCount int64   `json:"followers_count"`
+	FollowingCount int64   `json:"following_count"`
+	TotalPostCount int64   `json:"total_post_count"`
+	Posts          []Post  `json:"posts"`
 }
 
 type Post struct {
 	ID          int64
-	Content     *string   // text content of the post
+	Content     *string  // text content of the post
 	Attachments []string // list of images/video url's
 	Likes       int64
 	Comments    int64
 	Reposts     int64
 	Bookmarks   int64
 	CreatedAt   time.Time
+}
+
+type SearchUserRequest struct {
+	Rank    *string `json:"rank" binding:"omitempty,safe_alphabets"`
+	Name    *string `json:"name" binding:"omitempty,safe_alphabets"`
+	Company *string `json:"company" binding:"omitempty,alphanumspace"`
+}
+
+type SearchUserResponse struct {
+	ID             int64  `json:"id"`
+	FirstName      string `json:"first_name"`
+	LastName       string `json:"last_name"`
+	ProfilePicture string `json:"profile_picture"`
+	Rank           string `json:"rank"`
+	CompanyName    string `json:"company_name"`
 }
